  - Many bugfixes
- New config options (see https://gitlab.com/o9000/tint2/wikis/Configure):
  - Panel:
    - panel_window_name
    - panel_items (already released by distros)
    - disable_transparency
  - Taskbar:
    - taskbar_distribute_size
    - taskbar_hide_different_monitor
    - taskbar_hide_inactive_tasks
    - taskbar_sort_order
    - taskbar_name (already released by distros)
  - Launcher:
    - launcher* (already released by distros)
    - launcher_apps_dir (previously patched in by some distros)
    - startup_notifications
    - launcher_icon_theme_override
  - System tray:
    - systray_monitor
- Config options with changed behavior:
  - Panel:
    - panel_dock: previously, 'panel_dock = 1' was actually not placing the panel into the dock. This option now
      functions correctly. Due to the fact that OpenBox forcefully draws a border around dock windows, you might want to
      set it to zero (or change the border color/style to match tint2). If you set it to zero, make sure you do not have
      reserved space at the edge of the screen in the OpenBox config.
      Reason for change: issues 257, 394, 461, 465, 481.
    - panel_layer: previously, 'panel_layer = normal' was not functioning correctly. Now it does (it requires panel_dock = 0).
      Note that in this case some compositors will draw shadows of other windows behind tint2. This can be avoided in compton
      using the option shadow-exclude-reg = "x35+0-0" where 35 should be replaced with the size of the panel.
    - font_shadow: shadows are thicker and softer, and are now applied to all text elements, not just the taskbar.
      Reason for change: legibility improved for transparent panels.
  - Launcher:
    - launcher_item_app: now it expands leading ~ to the path to the user's home directory.
- Known issues:
  - tint2 might close unexpectedly and/or cause X to freeze on certain ATI graphics cards.
    Workaround: set 'disable_transparency = 1' in the config.