@@ -5,6 +5,7 @@ tint2 is developped by :
 - Euan Freeman <euan04@gmail.com> (tintwizard)
 - Christian Ruppert <Spooky85@gmail.com> (autotools build system)
 - Ovidiu M <mrovi9000 at gmail.com> : launcher, bug fixes
+- Mishael A Sibiryakov (death@junki.org) : freespace
 
 tint2 is based on ttm source code (http://code.google.com/p/ttm/)
 - 2007-2008 Pål Staurland <staura@gmail.com>
