@@ -42,6 +42,7 @@ include_directories( ${PROJECT_BINARY_DIR}
                      src/launcher
                      src/tooltip
                      src/util
+					 src/freespace
                      ${X11_INCLUDE_DIRS}
                      ${PANGOCAIRO_INCLUDE_DIRS}
                      ${PANGO_INCLUDE_DIRS}
@@ -67,7 +68,8 @@ set( SOURCES src/config.c
              src/taskbar/taskbar.c
              src/taskbar/taskbarname.c
              src/tooltip/tooltip.c
-             src/util/area.c
+			 src/freespace/freespace.c
+			 src/util/area.c
              src/util/common.c
              src/util/strnatcmp.c
              src/util/timer.c
